Closed Bug 1794719 Opened 2 years ago Closed 2 years ago

[CTW] Crash in [@ mozilla::a11y::AccessibleWrap::GetAtkObject]

Categories

(Core :: Disability Access APIs, defect)

Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox-esr102 --- disabled
firefox105 --- disabled
firefox106 --- disabled
firefox107 --- disabled
firefox108 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: [ctw-m3])

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/8ae0dc2e-c7a2-4773-865c-cb31c0221011

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0 libxul.so mozilla::a11y::AccessibleWrap::GetAtkObject accessible/atk/AccessibleWrap.cpp:306
1 libxul.so GetColumnHeaderCellsCB accessible/atk/nsMaiInterfaceTableCell.cpp:148
2 libatk-bridge-2.0.so.0 impl_GetColumnHeaderCells /usr/src/debug/at-spi2-core/atk-adaptor/adaptors/table-cell-adaptor.c:77
3 libatk-bridge-2.0.so.0 handle_other /usr/src/debug/at-spi2-core/droute/droute.c:562
3 libatk-bridge-2.0.so.0 handle_message /usr/src/debug/at-spi2-core/droute/droute.c:609
4 libdbus-1.so.3 _dbus_object_tree_dispatch_and_unlock /build/dbus/src/dbus/dbus/dbus-object-tree.c:1021
4 libdbus-1.so.3 dbus_connection_dispatch /build/dbus/src/dbus/dbus/dbus-connection.c:4742
4 libdbus-1.so.3 dbus_connection_dispatch /build/dbus/src/dbus/dbus/dbus-connection.c:4574
5 libatspi.so.0 message_queue_dispatch /usr/src/debug/at-spi2-core/atspi/atspi-gmain.c:89
6 libglib-2.0.so.0 g_main_dispatch /usr/src/debug/glib/glib/gmain.c:3444

It looks like I forgot to update the code which fetches a header cell Accessible in bug 1735970 so it correctly handles cached RemoteAccessibles.

Set release status flags based on info from the regressing bug 1735970

Set release status flags based on info from the regressing bug 1735970

Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ba629ad14280
Fix retrieval of AtkObject from cached RemoteAccessible in GetColumn/RowHeaderCellsCB. r=eeejay
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch

The patch landed in nightly and beta is affected.
:Jamie, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox107 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jteh)
Flags: needinfo?(jteh)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: