Bug 1794719: Fix retrieval of AtkObject from cached RemoteAccessible in GetColumn/RowHeaderCellsCB. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D159238